--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sveika Ir Skanu | Pagrindinis puslapis</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body style="background-color: rgb(166, 213, 164);">
     <header>
         <nav>
             <ul>
@@ -42,7 +42,7 @@
         </article>
         <article>
             <section>
-                <h2>KUR MUS RASTI?</h2>
+                <h2><span>KUR MUS RASTI?</span></h2>
 
                 <p>Mus rasi pačioje Vilniaus širdyje – miesto centre, kur susikerta darbas, laisvalaikis ir miesto gyvenimo ritmas. Esame lengvai pasiekiami tiek pėsčiomis, tiek užsukant trumpai kavos pertraukai ar ilgesniam pasisėdėjimui su draugais ar šeima.</p>
 
