--- a/pages/rezervacija.html
+++ b/pages/rezervacija.html
@@ -6,7 +6,7 @@
     <title>Sveika Ir Skanu | Rezervacija</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body style="background-image: url('../img/bg.jpg');">
     <header>
         <nav>
             <ul>
@@ -18,6 +18,9 @@
     </header>
     <div class="phantomHeader"></div>
     <main class="rez">
+        <div class="advl">
+            <p>Čia galėjo buti jūsų reklama</p>
+        </div>
         <form action="mailto:sveikia.ir.skanu@gmail.com" method="post" enctype="text/plain">
             <label for="input">Jūsų vardas ir pavardė</label>
             <input type="text" placeholder="Vardas Pavardė" required>
@@ -36,12 +39,15 @@
 
             <button type="submit">Siųsti</button>
         </form>
+        <div class="advr">
+            <p>Čia galėjo buti jūsų reklama</p>
+        </div>
     </main>
     <footer>
          <p>Sveika ir skanu © 2026</p>
          <button type="button">?</button>
        <div class="support">
-        <form action="mailto:sveika.ir.skanu@gmail.com" method="post" enctype="text/plain">
+        <form action="mailto:sveikia.ir.skanu@gmail.com" method="post" enctype="text/plain">
             <input type="text" placeholder="Jūsų vardas ir pavardė" required>
             <input type="email" placeholder="example@gmail.com" required>
             <textarea cols="50" rows="10" placeholder="Jūsų problemą" required></textarea>
